flux/apps/int/slskd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slskd
  labels:
    app.kubernetes.io/name: slskd
    app.kubernetes.io/instance: slskd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: slskd
      app.kubernetes.io/instance: slskd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: slskd
        app.kubernetes.io/instance: slskd
    spec:
      containers:
        - name: slskd
          image: slskd/slskd:0.26.0
          volumeMounts:
            - name: data
              mountPath: /app
            - name: downloads
              mountPath: /downloads
            - name: music
              mountPath: /shares/music
            - name: books
              mountPath: /shares/books
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /
              port: 5030
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5030
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5030
            periodSeconds: 5

        - name: slskd-ntfy
          image: git.vpn.lab.com/user01/slskd-ntfy:1.0.0-amd64
          ports:
            - containerPort: 3210
              name: http

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: music
          persistentVolumeClaim:
            claimName: music-pvc
        - name: books
          persistentVolumeClaim:
            claimName: books-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: config-template
          configMap:
            name: slskd-config-template
        - name: git-sync-volume
          emptyDir: {} # temporary workspace for git-sync
