flux/apps/int/slskd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: slskd-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-int
  hostnames:
    - "slskd.vpn.lab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: slskd-svc
          port: 5030
